fixed json payload issue, finished most of the design, covered an error handle case

--- a/frontend/twitter-clone/src/app/app.component.scss
+++ b/frontend/twitter-clone/src/app/app.component.scss
@@ -37,6 +37,7 @@ html, body {
   margin-top: 200px;
 }
 .tweet-content-container {
+  margin-top: 54px;
   /*border-color: rgb(239, 243, 244);
     border-style: solid;
     border-width: 1px;
